--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
             <span id="h1-mobile">pale blue dot.</span>
         </h1>
         <div class="h1-info">
-            <p class="h1-info-p ibmmono-regular">Un podcast que explora el mundo de la programación. Nuevos episodios,
-                todos los jueves
-                cada 15 días.
-            </p>
+            <p class="h1-info-p ibmmono-regular">Boost your programming skills. New episodes every thuersday.</p>
         </div>
 
         <p class="texto ibmmono-regular">Boost your programming skills. <br> 
