--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
+    <link rel="shortcut icon" href="./img/logo.svg" type="image/png" />
 </head>
 
 <body>
@@ -36,9 +37,10 @@
             <p class="h1-info-p ibmmono-regular">Boost your programming skills. New episodes every thuersday.</p>
         </div>
 
-        <p class="texto ibmmono-regular">Boost your programming skills. <br> 
-            <br>   
-           New episodes every thuersday.</p>
+        <p class="texto ibmmono-regular">Boost your programming skills. <br>
+            <br>
+            New episodes every thuersday.
+        </p>
 
         <div class="extrainfo-p ibmmono-medium">
             <a id="conoce-mas">VIEW MORE</a>
