--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
 
             <div class="episodes-container">
                 <iframe class="episodes-card"
-                    src="https://open.spotify.com/embed-podcast/episode/6eCHJ8yOYtksW8OT93Dbdu"
+                    src="https://open.spotify.com/embed/episode/5fd78Wp41IhaoKWVKBoS3C?utm_source=generator"
                     allow="encrypted-media"></iframe>
                 <iframe class="episodes-card"
-                    src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
+                    src="https://open.spotify.com/embed/episode/3OiBqsHp1v5jgefS2vmcex?utm_source=generator"
                     allow="encrypted-media"></iframe>
                 <iframe class="episodes-card"
-                    src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
+                    src="https://open.spotify.com/embed/episode/59PXOfe6zrEOky2fcl0cqH?utm_source=generator"
                     allow="encrypted-media"></iframe>
                 <iframe class="episodes-card"
-                    src="https://open.spotify.com/embed-podcast/episode/5mddqHiI96V0ZMdMidn3WW"
+                    src="https://open.spotify.com/embed/episode/41pmmcijt3HAWpalCP7O6D?utm_source=generator"
                     allow="encrypted-media"></iframe>
+
             </div>
         </section>
         <section class="history">
